- Add two numbers problems

--- a/problems/Makefile
+++ b/problems/Makefile
@@ -1,9 +1,16 @@
 # makefile
 
 SOURCE_RN = ransom_note.cpp
+SOURCE_TWONUM = add_two_numbers.cpp
+
 CMD = $(CXX) $? -Wall -std=c++14
 
 RN: $(SOURCE_RN)
 	$(CMD) -o output/ransom_note
 run_RN:
 	output/ransom_note
+
+TWONUM: $(SOURCE_TWONUM)
+	$(CMD) -o output/add_two_numbers
+run_TWONUM:
+	output/add_two_numbers
