--- a/problems/Makefile
+++ b/problems/Makefile
@@ -2,6 +2,7 @@
 
 SOURCE_RN = ransom_note.cpp
 SOURCE_TWONUM = add_two_numbers.cpp
+SOURCE_TWOSUM = two_sum.cpp
 
 CMD = $(CXX) $? -Wall -std=c++14
 
@@ -14,3 +15,8 @@ TWONUM: $(SOURCE_TWONUM)
 	$(CMD) -o output/add_two_numbers
 run_TWONUM:
 	output/add_two_numbers
+
+TWOSUM: $(SOURCE_TWOSUM)
+	$(CMD) -o output/two_sum
+run_TWOSUM:
+	output/two_sum
