- Add Find First Last Indices of Element in Sorted Arrays problem

--- a/problems/Makefile
+++ b/problems/Makefile
@@ -3,6 +3,7 @@
 SOURCE_RN = ransom_note.cpp
 SOURCE_TWONUM = add_two_numbers.cpp
 SOURCE_TWOSUM = two_sum.cpp
+SOURCE_FIRSTLAST = first_last_indices.cpp
 
 CMD = $(CXX) $? -Wall -std=c++14
 
@@ -20,3 +21,8 @@ TWOSUM: $(SOURCE_TWOSUM)
 	$(CMD) -o output/two_sum
 run_TWOSUM:
 	output/two_sum
+
+FIRSTLAST: $(SOURCE_FIRSTLAST)
+	$(CMD) -o output/first_last_indices
+run_FIRSTLAST:
+	output/first_last_indices
