- Add WIP Permutation

--- a/problems/Makefile
+++ b/problems/Makefile
@@ -4,6 +4,7 @@ SOURCE_RN = ransom_note.cpp
 SOURCE_TWONUM = add_two_numbers.cpp
 SOURCE_TWOSUM = two_sum.cpp
 SOURCE_FIRSTLAST = first_last_indices.cpp
+SOURCE_PERM = permutation.cpp
 
 CMD = $(CXX) $? -Wall -std=c++14
 
@@ -26,3 +27,8 @@ FIRSTLAST: $(SOURCE_FIRSTLAST)
 	$(CMD) -o output/first_last_indices
 run_FIRSTLAST:
 	output/first_last_indices
+
+PERM: $(SOURCE_PERM)
+	$(CMD) -o output/permutation
+run_PERM:
+	output/permutation
